# assignments-MI

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Tugas_2_Klasifikasi_Teks.ipynb  nano.sh  predictive_analysis.py  pyproject.toml  requirements-dev.txt  task_1.r  test_csv_loading.py
app/: EHR Clustering Analysis.html  presentasi.html
config/: config.yaml
database/export/: Alur_Belajar_Web_Development.csv  data_PBI_2025-01-01_hingga_2025-01-31.csv  data_PBI_APBD_2025-01-01_hingga_2025-01-31.csv  data_PBI_APBD_2025-02-01_hingga_2025-02-31.csv  data_PBI_APBN_2025-01-01_hingga_2025-01-31.csv  data_PBI_APBN_2025-02-01_hingga_2025-02-31.csv  data_PBI_JAMINAN_KESEHATAN_2025-01-01_hingga_2025-01-31.csv  data_PBI_JAMINAN_KESEHATAN_2025-02-01_hingga_2025-02-31.csv  data_duplikat_ktp_filtered.csv  data_pasien_2024-12-01_hingga_2024-12-31.csv  data_pasien_2025-01-01_hingga_2025-01-30.csv  ktp__non_bayi.csv  ktp_tidak_valid.csv  nama_tidak_valid.csv  qr_analysis_2025-02.csv
database/server/: api.py  database.py
docs/: Catatan-Presentasi-Data-Insight.md  Catatan-Presentasi-ML.md  Catatan_Presentasi_ML.md  Poin_Ringkas_Presentasi.md  README.md  promt big data.md
notebooks/: Tugas_1_python_basic.ipynb
src/: diagnostic_analysis.py  setup.py  task_2.r  task_3.r  task_4.r  task_5.r  test
